# poetry_docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: handler.py  main.py  pyproject.toml
app/doc/: luat_dan_su.docx
